--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <span class="nav-link">{{ user.get_full_name }}</span>
+                        <span class="nav-link">Hello {{ user.first_name|default:user.email }}</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'vacations:vacation_list' %}">Vacations</a>
@@ -64,14 +64,17 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                        <form method="post" action="{% url 'accounts:logout' %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-outline-danger btn-sm ms-2">Sign Out</button>
+                        </form>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                        <a class="btn btn-outline-primary btn-sm me-2" href="{% url 'accounts:login' %}">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                        <a class="btn btn-primary btn-sm" href="{% url 'accounts:signup' %}">Sign Up</a>
                     </li>
                     {% endif %}
                 </ul>
